# occa

./: .codecov.yml  .doxygen  .gitignore  .gitmodules  .memory_leak.travis.yml  .travis.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README  README.md  TODO  config.default.json  configure-cmake.sh  configure-sycl-nv-cmake.sh  make.py  makefile  setuprc
examples/: CMakeLists.txt
examples/2_background_device/: Makefile  main.cpp
examples/3_reduction/: Makefile  main.cpp  reduction.okl
examples/4_building_kernels/: Makefile  README.md  main.cpp
examples/5_unified_memory/: Makefile  README.md  addVectors.okl  main.cpp
examples/6_arrays/: Makefile  main.cpp  smallTranspose.okl
examples/7_streams/: Makefile  addVectors.okl  main.cpp
examples/8_mpi/: Makefile  README.md  addVectors.okl  main.cpp
examples/addVectors/: .gitignore  addVectors.floopy  addVectors.occa  addVectors.ofl  addVectors.okl  addVectors_cl.okl  addVectors_loopy.cl  addVectors_sharp.cs  main.c  main.cpp  main.f90  main.fl  main.jl  main.m  main.py  mainFloopy.cpp  mainFloopy.f90  main_ispc.cpp  makefile
examples/backgroundDevices/: Makefile  main.cpp
examples/c/: CMakeLists.txt
examples/concurrency/: CMakeLists.txt  README.md
examples/cpp/: CMakeLists.txt
examples/customReduction/: Makefile  main.cpp  makefile
examples/fd2d/: Makefile  README.org  fd2d.cl  fd2d.occa  fd2d.okl  fd2d_nonShared.occa  fd2d_nonShared.okl  fd2d_shared.cl  fd2d_shared.cu  fd2d_shared.okl  main.cpp  makefile  setuprc
examples/fortran/: CMakeLists.txt
examples/mandelbulb/: Makefile  main.cpp  makefile  rayMarcher.okl  setuprc
examples/midgTest/: Makefile  foo.okl  main.cpp  makefile  midg.okl
examples/nativeAddVectors/: Makefile  addVectors.cpp  addVectors.cu  main.cpp
examples/occAddVectors/: makefile
examples/reduction/: Makefile  main.cpp  makefile  reduction.cl  reduction.cu  reduction.okl
examples/testingArrays/: main.cpp
examples/unifiedMemoryAddVectors/: Makefile  addVectors.okl  main.cpp
examples/using1DTextures/: copy.occa  main.cpp  makefile
examples/usingArrays/: main.cpp  makefile  smallTranspose.okl
examples/usingKernelDB/: main.cpp
examples/usingLibrary/: main.cpp  makefile
examples/usingStreams/: Makefile  addVectors.occa  main.cpp  makefile
examples/usingTextures/: main.cpp  textureTranspose.occa
examples/uvaAddVectors/: Makefile  addVectors.okl  main.cpp
src/: CMakeLists.txt  COI.cpp  CUDA.cpp  FC.cpp  HSA.cpp  HSAV2.cpp  OpenCL.cpp  OpenMP.cpp  Pthreads.cpp  Serial.cpp  base.cpp  cBase.cpp  c_wrapper.cpp  device.cpp  fBase.f90  kernel.cpp  kernelArg.cpp  kernelOperators.cpp  library.cpp  memory.cpp  miniLib.cpp  mode.cpp  modes.cpp  mpi.cpp  occaBase.cpp  occaCBase.cpp  occaCOI.cpp  occaCUDA.cpp  occaF.f90  occaFC.cpp  occaFTypes.f90  occaHSA.cpp  occaKernelDefines.cpp  occaLibrary.cpp  occaMiniLib.cpp  occaOpenCL.cpp  occaOpenMP.cpp  occaParser.cpp  occaParserAnalyzer.cpp  occaParserDefines.cpp  (+19 more)
src/api/: metal.cpp  metal.mm
src/array/: linalg.cpp
src/c/: base.cpp  cli.cpp  device.cpp  dtype.cpp  io.cpp  json.cpp  kernel.cpp  kernelBuilder.cpp  kernel_fortran_interface.cpp  memory.cpp  memoryPool.cpp  properties.cpp  scope.cpp  stream.cpp  types.cpp  uva.cpp
src/core/: base.cpp  device.cpp  kernel.cpp  kernelArg.cpp  kernelBuilder.cpp  kernelOperators.cpp  kernelOperators.cpp_codegen  launchedDevice.cpp  launchedKernel.cpp  memory.cpp  memoryPool.cpp  scope.cpp  stream.cpp  streamTag.cpp
src/dtype/: builtins.cpp  dtype.cpp
src/experimental/: kernelBuilder.cpp  scope.cpp
src/fortran/: fc_string_m.f90  occa_base_m.f90  occa_device_m.f90  occa_kernelBuilder_m.f90  occa_kernel_m.f90  occa_m.f90  occa_memory_m.f90  occa_properties_m.f90  occa_scope_m.f90  occa_stream_m.f90  occa_typedefs_m.f90  occa_types_m.f90  occa_uva_m.f90
src/functional/: baseFunction.cpp  function.cpp  functionDefinition.cpp  range.cpp  scope.cpp  utils.cpp
src/io/: cache.cpp  fileOpener.cpp  lock.cpp  output.cpp  utils.cpp
src/lang/: attribute.cpp  baseStatement.cpp  errorHandler.cpp  exprNode.cpp  exprTransform.cpp  expression.cpp  file.cpp  kernelMetadata.cpp  keyword.cpp  macro.cpp  operator.cpp  parser.cpp  preprocessor.cpp  primitive.cpp  printer.cpp  processingStages.cpp  qualifier.cpp  scope.cpp  specialMacros.cpp  statement.cpp  statementContext.cpp  statementPeeker.cpp  statementTransform.cpp  token.cpp  tokenContext.cpp  tokenizer.cpp  type.cpp  variable.cpp
src/loops/: forLoop.cpp  iteration.cpp  typelessForLoop.cpp
src/operators/: COIKernelOperators.cpp  CUDAKernelOperators.cpp  OpenCLKernelOperators.cpp  OpenMPKernelOperators.cpp  PthreadsKernelOperators.cpp  SerialKernelOperators.cpp  cKernelOperators.cpp  definitions.cpp  occaCKernelOperators.cpp  occaCOIKernelOperators.cpp  occaCUDAKernelOperators.cpp  occaOpenCLKernelOperators.cpp  occaOpenMPKernelOperators.cpp  occaOperatorDefinitions.cpp  occaPthreadsKernelOperators.cpp  occaRunFromArguments.cpp  occaSerialKernelOperators.cpp  runFunctionFromArguments.cpp  runKernelFromArguments.cpp
src/parser/: analyzer.cpp  defines.cpp  magic.cpp  parser.cpp  preprocessor.cpp  primitive.cpp  statement.cpp  tools.cpp  types.cpp
src/python/: _C_occa.c
src/tools/: args.cpp  cli.cpp  env.cpp  exception.cpp  gc.cpp  hash.cpp  io.cpp  json.cpp  lex.cpp  logging.cpp  misc.cpp  properties.cpp  runFunction.cpp  string.cpp  styling.cpp  sys.cpp  testing.cpp  trie.cpp  uva.cpp  vector.cpp
src/types/: dim.cpp  json.cpp  primitive.cpp  properties.cpp  typeinfo.cpp
src/utils/: exception.cpp  hash.cpp  io.cpp  logging.cpp  mutex.cpp  uva.cpp
tests/: CMakeLists.txt  expression.cpp  keyword.cpp  parserUtils.hpp  preprocessor.cpp  primitive.cpp  run_bin_tests  run_examples  run_tests  stream.cpp  tokenContext.cpp  tokenizer.cpp  trie.cpp  type.cpp
tests/addDefines/: main.c  main.cpp  main.f90  makefile
tests/files/: addVectors.okl  argKernel.okl
tests/io/: cache.cpp  fileOpener.cpp  lock.cpp  utils.cpp
tests/lang/: expression.cpp  file.cpp  keyword.cpp  parser.cpp  parserUtils.hpp  (+6 more)
(+2574 files in other folders)
